--- a/style.css
+++ b/style.css
@@ -666,18 +666,19 @@ position: absolute;
               
         .pMain {
             opacity: 0;
+            stroke-dasharray: 4000;
         }
                 .pMain.active {
                     opacity: 1;
                     stroke-dasharray: 4000;
-                    animation: maindash 10s ease-out ;
+                    animation: maindash 10s linear;
                   }
                   
                   @keyframes maindash {
                     0% {
                       stroke-dashoffset: 4000;
                     }
-                    25% {
+                    45% {
                         stroke-dashoffset: 8000;
                       }
                       50% {
@@ -690,6 +691,7 @@ position: absolute;
                         stroke-dashoffset: 8000;
                       }
                   }
+
                   .pSecond {
                     opacity: 0;
                 }
@@ -889,6 +891,7 @@ position: absolute;
 Screen Sizes
 ===================*/
 
+
              @media (max-width: 1200px) {
                 #TextTitle{
     font-family: Almarai;
@@ -981,6 +984,7 @@ Screen Sizes
                     right: 5vw;
                      margin-right:-50px;
                           }
+                        
                 }
 
                 @media (max-width: 1000px) {
@@ -1049,6 +1053,8 @@ Screen Sizes
                         margin-right:0px;
                         z-index: 3010;
                         }
+                       
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
                         #starline1 {
                             animation: none;
                           }
@@ -1064,74 +1070,47 @@ Screen Sizes
                         #orbit {
                             animation: none;
                         }
-                        #satleg1{
 
-                            animation: none ;
-                        }
-                        #satleg2{
-                
-                            animation: none;
-                        }
                         #Car{
-                            -webkit-animation: Carmove 80s linear infinite;
-                            -moz-animation: Carmove 80s linear infinite;
                             animation: Carmove 80s linear infinite;
                                 } 
-                        #Train{
-                            -webkit-animation: Trainmove 60s  linear infinite;
-                            -moz-animation: Trainmove 60s  linear infinite;
-                            animation: Trainmove 60s  linear infinite;
-                           }   
-                           #afterburn {
-                            stroke-dasharray: 350;
-                            animation: none ;
-                            }
-                        .pMain {
-                            opacity: 1;
-                            stroke-dasharray: 4000;
-                            -webkit-animation: maindash 10s ease-out infinite;
-                            -moz-animation: maindash 10s ease-out infinite;
-                            animation: maindash 10s ease-out infinite;
-                          }
-
-                          .pSecond {  
-                            opacity: 1;
-                            -webkit-animation: secdash 10s ease-in infinite;
-                            -moz-animation: secdash 10s ease-in infinite;
-                            animation: secdash 10s ease-in infinite;
-
-                          }
-
-                          .pThird {
-                            opacity: 1;
-                            stroke-dasharray: 2500;
-                            -webkit-animation: thirddash 10s ease-in infinite;
-                            -moz-animation: thirddash 10s ease-in infinite;
-                            animation: thirddash 10s ease-in infinite;
-                          }
-                          .pMain.active {
-                            opacity: 1;
-                            stroke-dasharray: 4000;
-                            -webkit-animation: maindash 10s ease-out infinite;
-                            -moz-animation: maindash 10s ease-out infinite;
-                            animation: maindash 10s ease-out infinite;
-                          }
-
-                          .pSecond.active {  
-                            opacity: 1;
-                            -webkit-animation: secdash 10s ease-in infinite;
-                            -moz-animation: secdash 10s ease-in infinite;
-                            animation: secdash 10s ease-in infinite;
-
-                          }
-
-                          .pThird.active {
-                            opacity: 1;
-                            stroke-dasharray: 2500;
-                            -webkit-animation: thirddash 10s ease-in infinite;
-                            -moz-animation: thirddash 10s ease-in infinite;
-                            animation: thirddash 10s ease-in infinite;
-                          }
+                                .pMain {
+                                  opacity: 1;
+                                  -webkit-animation: maindash 12s linear;
+                                };
+                                  }
+                                  #Train{
+                                    animation: Trainmove 25s  linear;
+                                    animation-fill-mode: forwards;
+                                    float: left;
+                                  }
+                            
+                                  .pSecond {  
+                                    opacity: 1;
+                                    -webkit-animation: secdash 15s 3s linear forwards;
+                                    stroke-dashoffset: 2500;
+                                    stroke-dasharray: 2500;
+                                  }
+                            
+                                  .pThird {
+                                    opacity: 1;
+                                    -webkit-animation: thirddash 15s 3s linear forwards;
+                                    stroke-dashoffset: 2500;
+                                    stroke-dasharray: 2500;
+                                  }
+                                  #Rocket{
+                                    animation: flyanim 5s 2s ease-in-out forwards ;
+                                } 
+                                  @keyframes flyanim {
+                                    0% {
+                                   transform: translate(0px, 0px);
+                                    }
+                             
+                                      100% {
+                                        transform: translate(-30px, -100px);
+                                      }
+                                  }
+                                }
                     }
 
                     @media (max-width: 800px) {
