--- a/style.css
+++ b/style.css
@@ -1168,6 +1168,11 @@ Screen Sizes
                         }
 
                         @media (max-width: 480px) {
+                            html, body {
+                                max-width: 100%;
+                                max-height: 100%;
+                                overflow: hidden;
+                            }
                             .sidetext {           
                                 top: 400px;
                                 margin-left: 2vw;
