--- a/style.css
+++ b/style.css
@@ -1171,7 +1171,7 @@ Screen Sizes
                             html, body {
                                 max-width: 100%;
                                 max-height: 100%;
-                                overflow: hidden;
+                                overflow-x: hidden;
                             }
                             .sidetext {           
                                 top: 400px;
