--- a/style.css
+++ b/style.css
@@ -38,8 +38,16 @@ BODY STYLE
     html, body {
         max-width: 100%;
     }
-    
+
     element { max-width: 100vw; overflow-x: hidden; }
+
+    img{
+        max-width:100%;
+     }
+
+     svg{
+        max-width:100%;
+     }
 
 
 /* =================
@@ -659,10 +667,10 @@ position: absolute;
     .gridsystem1 #Particle{
         position: absolute;
         width: 50vw;
-        left: 40%;
+        left: 47%;
         transform: translate(-50%, -50%);
         z-index: 1100;
-        top: 70vw;
+        top: 72vw;
         margin-top: 200px;        
         }
               
