--- a/style.css
+++ b/style.css
@@ -39,7 +39,10 @@ BODY STYLE
         max-width: 100%;
     }
 
-    element { max-width: 100vw; overflow-x: hidden; }
+    .container {
+        max-width: 100% !important;
+        overflow-x: hidden !important;
+    }
 
 
 
