--- a/style.css
+++ b/style.css
@@ -1186,7 +1186,7 @@ Screen Sizes
 
                                     }
                                     .gridsystem1 #Powerstation{
-                                        margin-right: 150px;
+                                        margin-right: 50vw;
                                         margin-top: 63vw;
                                         }
 
